fixed spelling mistakes but still two bugs on mobile of gap on right and twitchy navbar

--- a/src/App.css
+++ b/src/App.css
@@ -818,10 +818,6 @@ a:hover {
 }
 
 @media only screen and (max-width: 1200px) {
-  #root{
-    width: 100vw;
-  }
-
   body {
     background-color: black;
   }
@@ -831,7 +827,7 @@ a:hover {
     padding-top: 10px;
     padding-bottom: 500px;
   }
-  
+
   .nav-btn {
     display: inline;
     letter-spacing: 0px;
@@ -882,7 +878,7 @@ a:hover {
     width: 40px;
     width: 7rem;
   }
-  
+
   .res-num-info {
     display: block;
     margin: 0em;
